Ensure enough contrast, shrink menu items on mobile

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -46,7 +46,24 @@ mat-toolbar {
 
 .menu-item:hover {
   text-decoration: none;
-  color: var(--pink);
+  color: var(--pink-light);
+}
+
+.menu-item:after {
+  background: none repeat scroll 0 0 transparent;
+  bottom: 0;
+  content: '';
+  display: block;
+  height: 2px;
+  left: 50%;
+  position: absolute;
+  background: #fff;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  width: 0;
+}
+.menu-item:hover:after {
+  width: 100%;
+  left: 0;
 }
 
 /* Footer */
@@ -70,6 +87,13 @@ mat-toolbar {
 @media (min-width: 640px) {
   .header-wrapper {
     width: calc(100% - 1rem * 2);
+  }
+  .menu-item {
+    text-transform: uppercase;
+    letter-spacing: 0.15em;
+    display: inline-block;
+    padding: 15px 20px;
+    position: relative;
   }
 
   .main-wrapper {
